syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "LyraBroker";

package broker;

service BrokerRPC {
  rpc GetStatus (google.protobuf.Empty) returns (GetStatusReply);
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceReply);
  rpc Send (SendRequest) returns (SendReply);
}

message GetStatusReply {
	bool IsReady = 1;
}

message GetBalanceRequest {
	string privateKey = 1;
}

message GetBalanceReply {
	repeated LyraBalance balances = 1;
}

message LyraBalance{
	string ticker = 1;
	double balance = 2;
}

message SendRequest {
	string privateKey = 1;
	double amount = 2;
	string destAccountId = 3;
	string ticker = 4;
}

message SendReply {
	bool success = 1;
}